# assista

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  keyboard.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
src/routes/keyboard/: +page.svelte
