[package]
name = "assista"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "assista_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Needed by lib.rs for the global keyboard/touchpad lock (WH_KEYBOARD_LL /
# WH_MOUSE_LL hooks), key injection (SendInput), and the non-activating
# window fix (SetWindowLongPtrW / ShowWindow). Windows-only: this target
# block is simply skipped when building for macOS/Linux, where those
# commands return an "unsupported" error instead.
#
# IMPORTANT: this version must match whatever `windows`/`windows-core`
# version Tauri itself pulls in transitively (check with
# `cargo tree -i windows-core`), or `tauri::WebviewWindow::hwnd()`'s HWND
# type won't match the HWND type used by these Win32 calls, causing
# "type mismatch resolving <HWND as TypeKind>" build errors. 0.61 matches
# current Tauri 2.x; bump this again if a future Tauri update moves further.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
